force-app/main/default/objects/FieloSVY__SurveyQuestion__c/FieloSVY__SurveyQuestion__c.object-meta.xml
<CustomObject>
    <label>Survey Question</label>
    <nameField>
        <displayFormat>SQ-{00000}</displayFormat>
        <label>Survey Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>