force-app/main/default/objects/FieloSVY__SurveyQuestion__c/fields/FieloSVY__Columns__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__Columns__c</fullName>
    <description>Amount of columns for Radio buttons or Checkbox options</description>
    <inlineHelpText>Amount of columns for Radio buttons or Checkbox options</inlineHelpText>
    <label>Columns</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FieloSVY__Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>