force-app/main/default/objects/FieloSVY__SurveyQuestion__c/fields/FieloSVY__Options__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__Options__c</fullName>
    <inlineHelpText>Question options separated by comma</inlineHelpText>
    <label>Options</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>