force-app/main/default/objects/FieloSVY__SurveyQuestion__c/fields/FieloSVY__Order__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__Order__c</fullName>
    <inlineHelpText>Order that this question will appear in the survey</inlineHelpText>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>