force-app/main/default/objects/FieloSVY__SurveyQuestion__c/fields/FieloSVY__Question__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__Question__c</fullName>
    <label>Question</label>
    <type>TextArea</type>
</CustomField>