force-app/main/default/objects/FieloSVY__SurveyQuestion__c/fields/FieloSVY__Required__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this questions is required to submit the survey</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>