force-app/main/default/objects/FieloSVY__SurveyQuestion__c/fields/FieloSVY__Survey__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__Survey__c</fullName>
    <label>Survey</label>
    <referenceTo>FieloSVY__Survey__c</referenceTo>
    <relationshipLabel>Survey Questions</relationshipLabel>
    <relationshipName>SurveyQuestions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>