force-app/main/default/objects/FieloSVY__SurveyQuestion__c/fields/FieloSVY__Type__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Radio Vertical</fullName>
            </value>
            <value>
                <fullName>Radio Horizontal</fullName>
            </value>
            <value>
                <fullName>Checkboxes</fullName>
            </value>
            <value>
                <fullName>Free Text</fullName>
            </value>
            <value>
                <fullName>Numeric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>